[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }
rustble = {path = "../rustble"}
rand = "0.9.0"
